--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -97,7 +97,10 @@ jobs:
         reverseOrder: true
     
     - name: echo changelog
-      run: echo "${{ steps.changelog.outputs.changes }}"
+      run: |
+        echo ${{ steps.changelog.outputs.changes }}
+        echo ---------------------------------------------
+        cat CHANGELOGS.md
 
 
   # create a release with the CHANGELOGS.md file
