--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -82,6 +82,17 @@ jobs:
         ls -R "Console Galaxy"
         ls -R ${{ github.workspace }}
 
+  # get previous tag
+    - name: Get previous tag
+      id: previoustag-id
+      run: echo "::set-output name=tag-previous::$(git describe --tags --abbrev=0 HEAD~1)"
+
+    - name: Show previous tag
+      run: echo ${{ steps.previoustag-id.outputs.tag-previous }}
+
+    - name: git log between previous and current tag
+      run: git log ${{ steps.previoustag-id.outputs.tag-previous }}..${{ github.ref }}
+
 # we are creating two separate changelog files, one for the repository and one for the release page:
   
   # make main CHANGELOGS.md file for the repository
@@ -92,7 +103,6 @@ jobs:
         echo "Changes for version ${{ github.ref_name }}" >> CHANGELOGS.md
         echo "===========================" >> CHANGELOGS.md
         git log -10 --pretty="format:Title: %s%n%nCommits:%n\`\`\`%n%b\`\`\`%n>By: %cn%n>Hash: %h%n>Date: %ci %n%n----------------------------------------------%n" >> CHANGELOGS.md
-        git log HEAD^..HEAD --pretty="format:Title: %s%n%nCommits:%n%b%n>By: %cn%n>Hash: %h%n>Date: %ci %n%n----------------------------------------------%n" >> AA_zipped_Folder/CHANGELOGS.md
     
   # make a CHANGELOGS.md file for the release and mod manager
   # AA_zipped_Folder/CHANGELOGS.md <--- this changelog is the changelog file that will be released on the release page, it only contains the changes of the current release, (HEAD^..HEAD) means between previous and current commit. 
@@ -101,7 +111,7 @@ jobs:
         echo ${{ github.ref_name }} >> CHANGELOGS.md
         echo "Changes for version ${{ github.ref_name }}" >> CHANGELOGS.md
         echo "===========================" >> CHANGELOGS.md
-        git log HEAD^..HEAD --pretty="format:Title: %s%n%nCommits:%n\`\`\`%n%b\`\`\`%n>By: %cn%n>Hash: %h%n>Date: %ci %n%n----------------------------------------------%n" >> AA_zipped_Folder/CHANGELOGS.md
+        git log HEAD~1..HEAD --pretty="format:Title: %s%n%nCommits:%n\`\`\`%n%b\`\`\`%n>By: %cn%n>Hash: %h%n>Date: %ci %n%n----------------------------------------------%n" >> AA_zipped_Folder/CHANGELOGS.md
 
     - name: Show CHANGELOGS
       run: cat CHANGELOGS.md
