--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        # clean: false      # without this checkout deletes empty folders after each use. # Default: true
+        clean: false      # without this checkout deletes empty folders after each use. # Default: true
         fetch-depth: 0    # Number of commits to fetch. 0 indicates all history for all branches and tags. # Default: 1
         fetch-tags: true  # Whether to fetch tags, even if fetch-depth > 0. # Default: false
     
@@ -65,6 +65,17 @@ jobs:
       run: cat AA_zipped_Folder/CHANGELOGS.md
     - name: list files tag:3
       run: ls -R
+
+    - name: Archive the repository changelogs
+      uses: actions/upload-artifact@v4
+      with:
+        name: changelog-repository
+        path: CHANGELOGS.md
+    - name: Archive the release changelogs
+      uses: actions/upload-artifact@v4
+      with:
+        name: changelog-release
+        path: AA_zipped_Folder/CHANGELOGS.md
 
 # <================================================ Release Job ================================================>
 # start the release jobs
