--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -31,7 +31,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        path: checkout_safe_folder
         # clean: false      # without this checkout deletes empty folders after each use. # Default: true
         fetch-depth: 0    # Number of commits to fetch. 0 indicates all history for all branches and tags. # Default: 1
         fetch-tags: true  # Whether to fetch tags, even if fetch-depth > 0. # Default: false
@@ -41,8 +40,6 @@ jobs:
       run: |
         mkdir AA_zipped_Folder
         mkdir "Console Galaxy"
-        echo "Directory created this is a test" > checkout_safe_folder/README.md
-        cat checkout_safe_folder/README.md
         
   # <---------------------------------------------- create full changelogs ---------------------------------------------->
   # make a CHANGELOGS.md file for the main repository
@@ -92,12 +89,12 @@ jobs:
     permissions: write-all
     needs: create-changelog
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        clean: false      # without this checkout deletes empty folders after each use. # Default: true
-        # fetch-depth: 0    # Number of commits to fetch. 0 indicates all history for all branches and tags. # Default: 1
-        # fetch-tags: true  # Whether to fetch tags, even if fetch-depth > 0. # Default: false
+    # - name: Checkout code
+    #   uses: actions/checkout@v4
+    #   with:
+    #     clean: false      # without this checkout deletes empty folders after each use. # Default: true
+    #     # fetch-depth: 0    # Number of commits to fetch. 0 indicates all history for all branches and tags. # Default: 1
+    #     # fetch-tags: true  # Whether to fetch tags, even if fetch-depth > 0. # Default: false
 
   # <---------------------------------------------- Upload artifact of mod to be zipped ---------------------------------------------->
   # upload the release artifact to memory, this is whats seen on the actions summary page under Artifacts
