--- a/.github/workflows/release-consolegalaxy.yml
+++ b/.github/workflows/release-consolegalaxy.yml
@@ -37,9 +37,7 @@ jobs:
     
     # make a directory to download the artifact to
     - name: make directories
-      run: |
-        mkdir AA_zipped_Folder
-        mkdir "Console Galaxy"
+      run: mkdir folder_changelog
         
   # <---------------------------------------------- create full changelogs ---------------------------------------------->
   # make a CHANGELOGS.md file for the main repository
@@ -53,18 +51,18 @@ jobs:
 
   # <---------------------------------------------- create short changelogs ---------------------------------------------->
   # make a CHANGELOGS.md file for the release and mod manager
-  # AA_zipped_Folder/CHANGELOGS.md <--- this changelog is the changelog file that will be released on the release page, it only contains the changes of the current release, (HEAD^..HEAD) means between previous and current commit. 
+  # folder_changelog/CHANGELOGS.md <--- this changelog is the changelog file that will be released on the release page, it only contains the changes of the current release, (HEAD^..HEAD) means between previous and current commit. 
     - name: Create CHANGELOGS file for release
       run: |
-        echo ${{ github.ref_name }} > AA_zipped_Folder/CHANGELOGS.md
-        echo "Changes for version ${{ github.ref_name }}" >> AA_zipped_Folder/CHANGELOGS.md
-        echo "===========================" >> AA_zipped_Folder/CHANGELOGS.md
+        echo ${{ github.ref_name }} > folder_changelog/CHANGELOGS.md
+        echo "Changes for version ${{ github.ref_name }}" >> folder_changelog/CHANGELOGS.md
+        echo "===========================" >> folder_changelog/CHANGELOGS.md
         git log HEAD^..${{ github.ref_name }} --pretty="format:Title: %s%n%nCommits:%n\`\`\`%n%b\`\`\`%n>By: %cn%n>Hash: %h%n>Date: %ci %n%n----------------------------------------------%n" | sed 's/tag: //g' >> AA_zipped_Folder/CHANGELOGS.md
 
     - name: Show CHANGELOGS main repository, full
       run: cat CHANGELOGS.md
     - name: Show CHANGELOGS for release, short
-      run: cat AA_zipped_Folder/CHANGELOGS.md
+      run: cat folder_changelog/CHANGELOGS.md
 
   # <---------------------------------------------- Upload artifact of full changelogs ---------------------------------------------->
     - name: Archive the repository changelogs
@@ -78,18 +76,16 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: changelog-release
-        path: AA_zipped_Folder/CHANGELOGS.md
+        path: folder_changelog/CHANGELOGS.md
 
     - name: list files tag:1
       run: |
         ls -R
         echo "1-----------------1"
-        find ./ | grep -iE "CHANGELOGS.md|AA_zipped_Folder|Console Galaxy|Console Galaxy.zip"
+        find ./ | grep -iE "CHANGELOGS.md|folder_changelog"
         echo "2-----------------2"
-        ls -R AA_zipped_Folder
+        ls -R folder_changelog
         echo "3-----------------3"
-        ls -R "Console Galaxy"
-        echo "4-----------------4"
         ls -R ${{ github.workspace }}
 
 # <================================================ Release Job ================================================>
@@ -146,21 +142,21 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: changelog-repository
-        path: "changelog-repository_folder"
+        path: "folder_changelog_repository"
       
     - name: Download changelog-release artifact
       uses: actions/download-artifact@v4
       with:
         name: changelog-release
-        path: "changelog-release_folder"
+        path: "folder_changelog_release"
 
     - name: list files tag:2
       run: |
         ls -R
         echo "1-----------------1"
-        ls -R AA_zipped_Folder
+        find ./ | grep -iE "CHANGELOGS.md|folder_changelog_repository|folder_changelog_release|Console Galaxy|Console Galaxy.zip"
         echo "2-----------------2"
-        ls -R "Console Galaxy"
+        ls -R folder_changelog_repository folder_changelog_release "Console Galaxy"
         echo "3-----------------3"
         ls -R ${{ github.workspace }}
 
@@ -173,10 +169,12 @@ jobs:
       run: |
         ls -R
         echo "1-----------------1"
-        ls -R AA_zipped_Folder
+        find ./ | grep -iE "CHANGELOGS.md|AA_zipped_Folder|Console Galaxy|Console Galaxy.zip"
         echo "2-----------------2"
-        ls -R "Console Galaxy"
+        ls -R AA_zipped_Folder
         echo "3-----------------3"
+        ls -R "Console Galaxy"
+        echo "4-----------------4"
         ls -R ${{ github.workspace }}
 
   # <---------------------------------------------- Release ---------------------------------------------->
